Completed Database SetUp

--- a/src/App/Web/App.Web/appsettings.json
+++ b/src/App/Web/App.Web/appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=App;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=PostBankTerminal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
