--- a/src/DWH/DWH/appsettings.json
+++ b/src/DWH/DWH/appsettings.json
@@ -1,9 +1,5 @@
-{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=DWH;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
