--- a/src/DWH/Services/Services.csproj
+++ b/src/DWH/Services/Services.csproj
@@ -5,11 +5,11 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
-
+	
 	<PropertyGroup>
-		<CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+		<CodeAnalysisRuleSet>..\Rules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
 	<ItemGroup>
-		<AdditionalFiles Include="..\..\stylecop.json" />
+		<AdditionalFiles Include="..\stylecop.json" />
 	</ItemGroup>
 </Project>
