--- a/src/App/Data/App.Data/appsettings.json
+++ b/src/App/Data/App.Data/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=App;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=PostBankTerminal;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
