--- a/src/App/Web/App.Web/App.Web.csproj
+++ b/src/App/Web/App.Web/App.Web.csproj
@@ -18,6 +18,8 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire" Version="1.7.30" />
+    <PackageReference Include="Hangfire.SqlServer" Version="1.7.30" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.6" />
     <PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
