--- a/src/DWH/DWH/DWH.csproj
+++ b/src/DWH/DWH/DWH.csproj
@@ -19,4 +19,19 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="appsettings.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Controllers\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Data\DWH.Data\DWH.Data.csproj" />
+	</ItemGroup>
+
 </Project>
