Added communication between DWH and App

--- a/src/App/Web/App.Web/appsettings.json
+++ b/src/App/Web/App.Web/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=PostBankTerminal;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "DWH": {
+    "Url": "https://localhost:7082/",
+    "AccessToken": "204569a3-3fff-4e62-b3f7-39efaa36c1"
   }
 }
