--- a/src/App/Services/App.Services.Data/App.Services.Data.csproj
+++ b/src/App/Services/App.Services.Data/App.Services.Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\App.Data.Common\App.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\App.Data.Models\App.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Data\App.Data\App.Data.csproj" />
     <ProjectReference Include="..\App.Services.Mapping\App.Services.Mapping.csproj" />
   </ItemGroup>
 
