--- a/src/DWH/DWH.Services/DWH.Services.csproj
+++ b/src/DWH/DWH.Services/DWH.Services.csproj
@@ -3,7 +3,6 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	
 	<PropertyGroup>
@@ -11,5 +10,12 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<AdditionalFiles Include="..\stylecop.json" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Data\DWH.Data.Models\DWH.Data.Models.csproj" />
+	  <ProjectReference Include="..\Data\DWH.Data\DWH.Data.csproj" />
 	</ItemGroup>
 </Project>
