--- a/src/App/Services/App.Services.Data/App.Services.Data.csproj
+++ b/src/App/Services/App.Services.Data/App.Services.Data.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\..\Data\App.Data.Common\App.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\App.Data.Models\App.Data.Models.csproj" />
     <ProjectReference Include="..\..\Data\App.Data\App.Data.csproj" />
+    <ProjectReference Include="..\..\Web\App.Web.ViewModels\App.Web.ViewModels.csproj" />
     <ProjectReference Include="..\App.Services.Mapping\App.Services.Mapping.csproj" />
   </ItemGroup>
 
