Added many things
I know it's bad practice, but it's a competition. I am in a hurry

--- a/src/App/Web/App.Web.ViewModels/App.Web.ViewModels.csproj
+++ b/src/App/Web/App.Web.ViewModels/App.Web.ViewModels.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\App.Common\App.Common.csproj" />
     <ProjectReference Include="..\..\Data\App.Data.Models\App.Data.Models.csproj" />
     <ProjectReference Include="..\..\Services\App.Services.Mapping\App.Services.Mapping.csproj" />
   </ItemGroup>
