--- a/src/App/Web/App.Web.Infrastructure/App.Web.Infrastructure.csproj
+++ b/src/App/Web/App.Web.Infrastructure/App.Web.Infrastructure.csproj
@@ -13,9 +13,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\App.Common\App.Common.csproj" />
+    <ProjectReference Include="..\..\Data\App.Data.Models\App.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Services\App.Services.Data\App.Services.Data.csproj" />
   </ItemGroup>
 
 </Project>
