--- a/src/App/Services/App.Services.Messaging/App.Services.Messaging.csproj
+++ b/src/App/Services/App.Services.Messaging/App.Services.Messaging.csproj
@@ -13,10 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.6" />
     <PackageReference Include="Sendgrid" Version="9.28.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Web\App.Web.ViewModels\App.Web.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
