--- a/src/App/Web/App.Web/appsettings.Development.json
+++ b/src/App/Web/App.Web/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "GmailSender": {
+    "Email": "safgasasdfdfjgf@gmail.com",
+    "Password": "asfastgaaa"
   }
 }
