--- a/src/App/Web/App.Web/appsettings.Development.json
+++ b/src/App/Web/App.Web/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
   "GmailSender": {
     "Email": "safgasasdfdfjgf@gmail.com",
-    "Password": "asfastgaaa"
+    "Password": "uxujxngejfnqawuq"
   }
 }
