--- a/src/App/Web/App.Web/appsettings.json
+++ b/src/App/Web/App.Web/appsettings.json
@@ -12,5 +12,10 @@
   "DWH": {
     "Url": "https://localhost:7082/",
     "AccessToken": "204569a3-3fff-4e62-b3f7-39efaa36c1"
+  },
+  "Admin": {
+    "Username": "admin",
+    "Email": "danielyordanov04@outlook.com",
+    "Password": "sadA2424@!2as"
   }
 }
