Added a few hotfixes

--- a/src/App/Web/App.Web/appsettings.json
+++ b/src/App/Web/App.Web/appsettings.json
@@ -15,7 +15,7 @@
   },
   "Admin": {
     "Username": "admin",
-    "Email": "danielyordanov04@outlook.com",
+    "Email": "safgasasdfdfjgf@gmail.com",
     "Password": "sadA2424@!2as"
   }
 }
